fix: z-index bugfixing

--- a/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
+++ b/packages/osc-ui/src/components/Autocomplete/autocomplete.scss
@@ -66,7 +66,6 @@
         &__input-clear-button-wrapper {
             position: absolute;
             top: 0;
-            z-index: 0;
             display: flex;
             align-items: center;
             justify-content: right;
@@ -80,9 +79,9 @@
             cursor: pointer;
         }
 
-        &__outer-container {
+        input {
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
 
         &__input-wrapper {
